# auth-system-openhands

./: .env.example  .openhands_instructions  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
auth_system/: admin.py  models.py  settings.py  urls.py
auth_system/migrations/: 0001_initial.py
auth_system/tests/: test_models.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_role_mfadevice_session_userrole.py
users/tests/: test_auth.py  test_models.py
users/tests/models/: test_mfa.py  test_roles.py  test_sessions.py  test_user_roles.py  test_users.py
users/tests/views/: test_auth.py
